@@ -1,5 +1,5 @@
 Name:			cmu
-Version:		1.10
+Version:		1.11
 Maintainer:		ramsdell@mitre.org
 Cabal-Version:		>= 1.6
 License:		GPL
