@@ -1,6 +1,11 @@
+2018-01-06  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* src/Algebra/CommutativeMonad/Main.hs (readM): Adapted the code
+	to work when Monad no longer has a fail method.
+
 2015-04-27  John D. Ramsdell  <ramsdell@mitre.org>
 
-	* src/Algebra/AbelianGroup/Main.hs (AnsErr): Added Functor and
+	* src/Algebra/CommutativeMonad/Main.hs (AnsErr): Added Functor and
 	Applicative instance so that the code compiles with GHC 7.10.
 	Thanks go to Douglas McClean.
 
